jena-shex/src/test/files/spec/negativeSyntax/STRING_LITERAL2-ending-APOSTROPHE.shex
# STRING_LITERAL2 ending with APOSTROPHE
# source: turtle-syntax-bad-string-01.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1> ["abc']
}
